# infrar-sdk-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: data_pipeline.py  file_backup.py  simple_upload.py
infrar/: __init__.py
infrar/storage/: __init__.py
tests/: __init__.py  test_storage.py
